--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,8 @@
 <body>
 <form method="post" style="max-width:600px;">
 <div class="form-group">
+    System.out.println(languages);
+
     Language to Translate:
     <label th:for="language">Language
         <input type="text" th:field="=${language.name}" class="form-control"/>
@@ -27,8 +29,9 @@
     <p class="error" th:errors="${language.name}"></p>
     </label>
     </div>
-    <input type="submit" value="Add Language" />
-</form>
+    <div class="form-group">
+        <input type="submit" class="btn btn-primary" value="Language"/>
+    </div></form>
 </body>
 </html>
 
